Update and rename index.html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         function showMessage(answer) {
             const messageElement = document.getElementById('message');
             if (answer === 'EVET') {
-                messageElement.innerHTML = 'Oley! Ben de seni çok seviyorum! ❤️';
+                messageElement.innerHTML = 'Oley! Ben de seni çok seviyorum!-kuzey balat❤️';
                 messageElement.style.color = '#4caf50'; // Yeşil
             } else {
                 messageElement.innerHTML = 'Üzüldüm... Ama ben seni yine de çok seviyorum! 😔';
@@ -87,4 +87,5 @@
     </script>
 
 </body>
+
 </html>
